--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node bot.js",
     "dev": "nodemon bot.js"
   },
   "repository": {
